--- a/src/scss/config/_colors.scss
+++ b/src/scss/config/_colors.scss
@@ -25,6 +25,7 @@
   --dark-color-2: #666;
   --background-color: #fefe;
   --text-color: #eee;
+  --text-parrafo:#676565c7;
 }
 
 $primary-color: var(--primary-color);
@@ -52,3 +53,4 @@ $background-color: var(--background-color);
 $dark-color: var(--dark-color);
 $dark-color-2: var(--dark-color-2);
 $text-color: var(--text-color);
+$text-parrafo: var(--text-parrafo);
