--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,12 @@
 @import "blocks/header";
 @import "blocks/main";
 @import "blocks/footer";
-@import "blocks/slider";
+//@import "blocks/slider";
+@import "blocks/slider-2";
+@import "blocks/carrusel";
+@import "blocks/card";
+@import "blocks/menu";
+
 
 
 
