--- a/src/scss/base/grid_body.scss
+++ b/src/scss/base/grid_body.scss
@@ -1,8 +1,8 @@
 body{
-	background-color: #ece9e9;
+	background-color: $background-color;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: auto;
+	grid-template-rows: 78px 1250px 75px auto;
 	
 }
 
