--- a/src/scss/base/grid_body.scss
+++ b/src/scss/base/grid_body.scss
@@ -2,7 +2,7 @@ body{
 	background-color: $background-color;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 78px 1250px 75px auto;
+	grid-template-rows: 78px 1250px 1200px 75px;
 	
 }
 
