--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -10,10 +10,10 @@
     border: 1px solid #ccc;
     padding: 10px;
     margin: 10px;
-    max-width: 285px;
+    max-width: 270px;
     height: 350px;
     overflow: hidden;
-    box-shadow: 1px 11px 52px -16px rgba(0,0,0,0.87);
+    box-shadow: 1px 11px 22px -16px rgba(0,0,0,0.87);
     //z-index: 6;
   }
   
@@ -23,17 +23,38 @@
     width: 150px;
     height: 150px;
     margin-right: 2px;
-    border: 8px groove $primary-color;
-   
+    border: 10px solid transparent;
+    box-shadow: 0px 5px 10px -3px rgba(0,0,0,0.71); 
     
-    
+  
   }
+  
+  .card__img-1{
+    background-color:$primary-color-s;   
+  }
+  .card__img-2{
+    background-color:$primary-color-f;   
+  }
+  .card__img-3{
+    background-color:$primary-color-l;   
+  }
+  .card__img-4{
+    background-color:$base-color-s;   
+  }
+
+
   .title_principal{
     display: flex;
     justify-content: center;
     font-size: 1.9rem;
     font-family: $big-title;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+
     color: $dark-color;
+    margin-bottom: 2.5px;
+    border-bottom: 2px solid $dark-color-3;
+
   }
   .card__img{
     padding: auto;
@@ -54,16 +75,16 @@
     font-family: $big-title;
     color: $text-parrafo;
   }
-  .button{
+  .modal1{
   position:relative;
-  bottom: 5px;
   left: 0;
   right: 0;
   padding: 10px;
+  text-decoration: none;
   text-align: center;
   background-color: #377caf;
   color: $text-color;
-  border-radius: 15px;
+  border-radius: 50px;
   cursor: pointer;
  
   }
