--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -12,7 +12,7 @@
     margin: 10px;
     max-width: 270px;
     height: 350px;
-    overflow: hidden;
+    //overflow: hidden;
     box-shadow: 1px 11px 22px -16px rgba(0,0,0,0.87);
     //z-index: 6;
   }
